@@ -1,7 +1,8 @@
 Release ...
 * New versions of the 'mail' and 'spell' utilities have been introduced;
   they have been derived from OpenSolaris code.
-* The 'bfs' utility is now available (derived from OpenSolaris code).
+* The 'bfs' and 'getopt' utilities are now available (derived from
+  OpenSolaris code).
 * Both Unix lex and flex can now be used for building the tools.
 * xargs: The '-l' and '-L' options override previous occurrences of the
   '-i' or '-I' option.
